# server/routes/auth.routes.js
@@ -1,0 +1,11 @@
+const express = require('express');
+
+const router = express.Router();
+
+const authController = require('../controllers/auth.controller');
+
+router.post('/signup', authController.signup);
+
+router.post('/signin', authController.signin);
+
+module.exports = router;
