# server/swagger.yaml
@@ -10,6 +10,61 @@ info:
     description: This is the production server
 
 paths:
+  /auth/signup:
+    post:
+      summary: User Registration
+      description: Respond with success status
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - username
+                - email
+                - password
+              properties:
+                username:
+                  type: string
+                email:
+                  type: string
+                password:
+                  type: string
+      responses:
+        200:
+          description: Successful Response
+        500:
+          description: Internal Server Error
+
+  /auth/signin:
+    post:
+      summary: User Login
+      description: Respond with success status
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - username
+                - password
+              properties:
+                username:
+                  type: string
+                password:
+                  type: string
+      responses:
+        200:
+          description: Successful Response
+        401:
+          description: Unauthorized
+        404:
+          description: Not Found
+        500:
+          description: Internal Server Error
+
   /authors:
     get:
       summary: Get the list of the authors
